--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Number Guessing Game</title>
+    <title>Mitra's Number Guessing Game</title>
     <link href="https://fonts.googleapis.com/css2?family=Grenze+Gotisch&family=Itim&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
