--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <section id="sec1">
-            <h1>Number Guessing Game</h1>
+            <h1>Mitra's Number Guessing Game</h1>
             <div class="mode">
                 <h2>Select your mode</h2>
                 <button id="esy" onclick="start1()">Easy</button>
