--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 <ul id="list"></ul>
             </div>
             <div id="rem">
-                <span id="remaining"></span> Guesses Left </br>
-                Guessing range: "guess_lowerbound" X "guess_upperbound"
+                <span id="remaining"></span> Guesses Left, Guessing range: "guess_lowerbound" X "guess_upperbound" </br>
+                <!-- Guessing range: "guess_lowerbound" X "guess_upperbound" -->
             </div>
         </div>
     </section>
