commenting out code that's not working

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <ul id="list"></ul>
             </div>
             <div id="rem">
-                <span id="remaining"></span> Guesses Left, Guessing range: "guess_lowerbound" X "guess_upperbound" </br>
+                <span id="remaining"></span> Guesses Left </br>
                 <!-- Guessing range: "guess_lowerbound" X "guess_upperbound" -->
             </div>
         </div>
