--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section id="sec1">
             <h1>Mitra's Number Guessing Game</h1>
             <div class="mode">
-                <h2>Select your mode</h2>
+                <h2>Select your difficulty:</h2>
                 <button id="esy" onclick="start1()">Easy</button>
                 <button id="med" onclick="start2()">Medium</button>
                 <button id="hrd" onclick="start3()">Hard</button>
